--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.51.4",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
     "json-server": "^1.0.0-beta.1",
